Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-12 (SVN):
    * bgmusic.c: Changed MIDIDRIVER_MID definition from 1<<31 to 1<<30.

2011-06-12 (SVN):
    * Fixed compilation when ENDIAN_RUNTIME_DETECT is defined as 1 (bug
      was introduced in previous commit at rev.4028.)
    * Tidy ups various places for endian ifdefs. Use new host_bigendian
      where needed.
    * q_endian.c, q_endian.h: Changed host_bigendian to be an int so that
      sources not having qboolean can still include q_endian.h.
    * q_endian.c: Added host_bigendian as a new global.

2011-06-11 (SVN):
    * q_stdinc.h: Updated notes about qboolean and C++ bool types, added
      compile time asserts.

2011-06-07 (SVN):
    * gamecode, hc: Created new devel directory. Moved excessively long
      analysis details from buddha.hc, eidolon.hc and mezzoman.hc to the
      corresponding text files under the new directory.

2011-06-07 (SVN):
    * utils, hcc: Fixed broken switch statement compilation when there is
      an implicit break in the last case.  Hcc emits an additional break op
      when it hits an implicit break, but it used to forget incrementing
      the switch statement's b value accordingly, which resulted in broken
      progs.  Has been broken since Raven's h2_utils and h2mputil releases.
      Works properly now.

2011-06-07 (SVN):
    * Updated hexen2 macosx xcode project file: fixed file paths after the
      libs/common/ directory addition and added bgmusic.c and snd_codec.c
      among the sources, added ../../h2shared and ../../../libs/common to
      all HEADER_SEARCH_PATHS definitions.  Possibly and hopefully, these
      would make hexen2 and glhexen2 to build for osx again, but requires
      Levent's love and care.  No ogg or mp3 codecs are added to build and
      those require Levent, too.

2011-06-05 (SVN):
    * rpm spec file: bumped version to 1.5.0-rc3.

2011-06-05 (SVN):